crates/iscc-ffi/include/iscc.h

/**
 * Maximum byte length for the name field after trimming.
 */
 uint32_t iscc_meta_trim_name(void);
/**
 * Maximum byte length for the description field after trimming.
 */
 uint32_t iscc_meta_trim_description(void);
/**
 * Maximum byte length for the meta field payload after decoding.
 */
 uint32_t iscc_meta_trim_meta(void);
/**
 * Default read buffer size for streaming I/O (4 MB).
 */
 uint32_t iscc_io_read_size(void);
/**
 * Sliding window width for text n-gram generation.
 */
 uint32_t iscc_text_ngram_size(void);
/**
 * Allocate `size` bytes of WASM-side memory.
 *
 * Returns a pointer the host can write into. The host must call
 * `iscc_dealloc` to free this memory. Returns a dangling (non-null)
 * pointer for `size == 0`.
 *
 * # Safety
 *
 * The caller must ensure `size` bytes are actually needed and must free
 * the allocation with `iscc_dealloc(ptr, size)`.
 */
 uint8_t *iscc_alloc(uintptr_t size);
/**
 * Free `size` bytes of WASM-side memory at `ptr`, previously allocated
 * by `iscc_alloc`.
 *
 * No-op if `ptr` is null. Passing `size == 0` is a no-op because
 * `iscc_alloc(0)` returns a dangling pointer that was never allocated.
 *
 * # Safety
 *
 * - `ptr` must have been returned by `iscc_alloc(size)` with the same `size`.
 * - Each allocation must be freed exactly once.
 */
 void iscc_dealloc(uint8_t *ptr, uintptr_t size);
/**
 * Generate a Meta-Code from name and optional metadata.
 *
 * # Parameters
 *
 * - `name`: required, null-terminated UTF-8 string
 * - `description`: optional (NULL means not provided)
 * - `meta`: optional (NULL means not provided)
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * All non-null pointer arguments must point to valid null-terminated UTF-8 strings.
 */

char *iscc_gen_meta_code_v0(const char *name,
                            const char *description,
                            const char *meta,
                            uint32_t bits);
/**
 * Generate a Text-Code from plain text content.
 *
 * # Parameters
 *
 * - `text`: required, null-terminated UTF-8 string
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `text` must point to a valid null-terminated UTF-8 string.
 */
 char *iscc_gen_text_code_v0(const char *text, uint32_t bits);
/**
 * Generate an Image-Code from pixel data.
 *
 * # Parameters
 *
 * - `pixels`: pointer to 1024 grayscale pixel values (32x32)
 * - `pixels_len`: number of bytes in the pixel buffer
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `pixels` must point to a valid buffer of at least `pixels_len` bytes.
 */
 char *iscc_gen_image_code_v0(const uint8_t *pixels, uintptr_t pixels_len, uint32_t bits);
/**
 * Generate an Audio-Code from a Chromaprint feature vector.
 *
 * # Parameters
 *
 * - `cv`: pointer to signed 32-bit integer Chromaprint features
 * - `cv_len`: number of elements in the feature vector
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `cv` must point to a valid buffer of at least `cv_len` `i32` elements.
 */
 char *iscc_gen_audio_code_v0(const int32_t *cv, uintptr_t cv_len, uint32_t bits);
/**
 * Generate a Video-Code from frame signature data.
 *
 * # Parameters
 *
 * - `frame_sigs`: array of pointers to frame signature arrays
 * - `frame_lens`: array of lengths for each frame signature
 * - `num_frames`: number of frames
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * - `frame_sigs` must point to an array of `num_frames` valid pointers
 * - `frame_lens` must point to an array of `num_frames` lengths
 * - Each `frame_sigs[i]` must be valid for `frame_lens[i]` `i32` elements
 */

char *iscc_gen_video_code_v0(const int32_t *const *frame_sigs,
                             const uintptr_t *frame_lens,
                             uintptr_t num_frames,
                             uint32_t bits);
/**
 * Generate a Mixed-Code from multiple Content-Code strings.
 *
 * # Parameters
 *
 * - `codes`: array of pointers to null-terminated ISCC code strings
 * - `num_codes`: number of code strings
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `codes` must point to an array of `num_codes` valid null-terminated UTF-8 strings.
 */
 char *iscc_gen_mixed_code_v0(const char *const *codes, uintptr_t num_codes, uint32_t bits);
/**
 * Generate a Data-Code from raw byte data.
 *
 * # Parameters
 *
 * - `data`: pointer to raw byte data
 * - `data_len`: number of bytes
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `data` must point to a valid buffer of at least `data_len` bytes.
 */
 char *iscc_gen_data_code_v0(const uint8_t *data, uintptr_t data_len, uint32_t bits);
/**
 * Generate an Instance-Code from raw byte data.
 *
 * # Parameters
 *
 * - `data`: pointer to raw byte data
 * - `data_len`: number of bytes
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `data` must point to a valid buffer of at least `data_len` bytes.
 */
 char *iscc_gen_instance_code_v0(const uint8_t *data, uintptr_t data_len, uint32_t bits);
/**
 * Generate a composite ISCC-CODE from individual unit codes.
 *
 * # Parameters
 *
 * - `codes`: array of pointers to null-terminated ISCC unit code strings
 * - `num_codes`: number of code strings
 * - `wide`: if true and exactly 2 codes (Data+Instance) with 128+ bits, produce wide output
 *
 * # Returns
 *
 * Heap-allocated ISCC string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `codes` must point to an array of `num_codes` valid null-terminated UTF-8 strings.
 */
 char *iscc_gen_iscc_code_v0(const char *const *codes, uintptr_t num_codes, bool wide);
/**
 * Free a string previously returned by any `iscc_gen_*` function.
 *
 * # Safety
 *
 * `ptr` must be a pointer returned by one of the `iscc_gen_*_v0` functions,
 * or `NULL` (which is a no-op). Each pointer must only be freed once.
 */
 void iscc_free_string(char *ptr);