packages/dotnet/Iscc.Lib/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Iscc.Lib
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "iscc_ffi";





        /// <summary>
        ///  Maximum byte length for the name field after trimming.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_meta_trim_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint iscc_meta_trim_name();

        /// <summary>
        ///  Maximum byte length for the description field after trimming.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_meta_trim_description", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint iscc_meta_trim_description();

        /// <summary>
        ///  Maximum byte length for the meta field payload after decoding.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_meta_trim_meta", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint iscc_meta_trim_meta();

        /// <summary>
        ///  Default read buffer size for streaming I/O (4 MB).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_io_read_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint iscc_io_read_size();

        /// <summary>
        ///  Sliding window width for text n-gram generation.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_text_ngram_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint iscc_text_ngram_size();

        /// <summary>
        ///  Allocate `size` bytes of WASM-side memory.
        ///
        ///  Returns a pointer the host can write into. The host must call
        ///  `iscc_dealloc` to free this memory. Returns a dangling (non-null)
        ///  pointer for `size == 0`.
        ///
        ///  # Safety
        ///
        ///  The caller must ensure `size` bytes are actually needed and must free
        ///  the allocation with `iscc_dealloc(ptr, size)`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_alloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_alloc(nuint size);

        /// <summary>
        ///  Free `size` bytes of WASM-side memory at `ptr`, previously allocated
        ///  by `iscc_alloc`.
        ///
        ///  No-op if `ptr` is null. Passing `size == 0` is a no-op because
        ///  `iscc_alloc(0)` returns a dangling pointer that was never allocated.
        ///
        ///  # Safety
        ///
        ///  - `ptr` must have been returned by `iscc_alloc(size)` with the same `size`.
        ///  - Each allocation must be freed exactly once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_dealloc(byte* ptr, nuint size);

        /// <summary>
        ///  Generate a Meta-Code from name and optional metadata.
        ///
        ///  # Parameters
        ///
        ///  - `name`: required, null-terminated UTF-8 string
        ///  - `description`: optional (NULL means not provided)
        ///  - `meta`: optional (NULL means not provided)
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  All non-null pointer arguments must point to valid null-terminated UTF-8 strings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_meta_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_meta_code_v0(byte* name, byte* description, byte* meta, uint bits);

        /// <summary>
        ///  Generate a Text-Code from plain text content.
        ///
        ///  # Parameters
        ///
        ///  - `text`: required, null-terminated UTF-8 string
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `text` must point to a valid null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_text_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_text_code_v0(byte* text, uint bits);

        /// <summary>
        ///  Generate an Image-Code from pixel data.
        ///
        ///  # Parameters
        ///
        ///  - `pixels`: pointer to 1024 grayscale pixel values (32x32)
        ///  - `pixels_len`: number of bytes in the pixel buffer
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `pixels` must point to a valid buffer of at least `pixels_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_image_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_image_code_v0(byte* pixels, nuint pixels_len, uint bits);

        /// <summary>
        ///  Generate an Audio-Code from a Chromaprint feature vector.
        ///
        ///  # Parameters
        ///
        ///  - `cv`: pointer to signed 32-bit integer Chromaprint features
        ///  - `cv_len`: number of elements in the feature vector
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `cv` must point to a valid buffer of at least `cv_len` `i32` elements.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_audio_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_audio_code_v0(int* cv, nuint cv_len, uint bits);

        /// <summary>
        ///  Generate a Video-Code from frame signature data.
        ///
        ///  # Parameters
        ///
        ///  - `frame_sigs`: array of pointers to frame signature arrays
        ///  - `frame_lens`: array of lengths for each frame signature
        ///  - `num_frames`: number of frames
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  - `frame_sigs` must point to an array of `num_frames` valid pointers
        ///  - `frame_lens` must point to an array of `num_frames` lengths
        ///  - Each `frame_sigs[i]` must be valid for `frame_lens[i]` `i32` elements
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_video_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_video_code_v0(int** frame_sigs, nuint* frame_lens, nuint num_frames, uint bits);

        /// <summary>
        ///  Generate a Mixed-Code from multiple Content-Code strings.
        ///
        ///  # Parameters
        ///
        ///  - `codes`: array of pointers to null-terminated ISCC code strings
        ///  - `num_codes`: number of code strings
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `codes` must point to an array of `num_codes` valid null-terminated UTF-8 strings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_mixed_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_mixed_code_v0(byte** codes, nuint num_codes, uint bits);

        /// <summary>
        ///  Generate a Data-Code from raw byte data.
        ///
        ///  # Parameters
        ///
        ///  - `data`: pointer to raw byte data
        ///  - `data_len`: number of bytes
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `data` must point to a valid buffer of at least `data_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_data_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_data_code_v0(byte* data, nuint data_len, uint bits);

        /// <summary>
        ///  Generate an Instance-Code from raw byte data.
        ///
        ///  # Parameters
        ///
        ///  - `data`: pointer to raw byte data
        ///  - `data_len`: number of bytes
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `data` must point to a valid buffer of at least `data_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_instance_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_instance_code_v0(byte* data, nuint data_len, uint bits);

        /// <summary>
        ///  Generate a composite ISCC-CODE from individual unit codes.
        ///
        ///  # Parameters
        ///
        ///  - `codes`: array of pointers to null-terminated ISCC unit code strings
        ///  - `num_codes`: number of code strings
        ///  - `wide`: if true and exactly 2 codes (Data+Instance) with 128+ bits, produce wide output
        ///
        ///  # Returns
        ///
        ///  Heap-allocated ISCC string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `codes` must point to an array of `num_codes` valid null-terminated UTF-8 strings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_iscc_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_gen_iscc_code_v0(byte** codes, nuint num_codes, [MarshalAs(UnmanagedType.U1)] bool wide);
